# FastAPI_A3_Yani

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  git_key  git_key.pub  pyproject.toml  requirements.txt
app/: main.py
fetch/: kraken_ohlc_solusd.py  sol_fetch.py
models/: lgbm_final_ma_copy.joblib
preprocessing/: feature_engineering.py
tests/: test_kraken_integration.py  test_kraken_unit.py
